# MassFckinMailer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  PLAN.md  README.md
.github/workflows/: channels.yml  ci.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/examples/: gen_icon.rs
crates/app/locales/: app.yml
crates/app/src/: assets.rs  main.rs  main_window.rs  theme.rs
crates/core/: Cargo.toml
crates/core/src/: import.rs  lib.rs  mapping.rs  project.rs  settings.rs  template.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  update.rs
crates/providers/: Cargo.toml
crates/providers/src/: account.rs  factory.rs  gmail.rs  lib.rs  mailgun.rs  oauth.rs  outlook.rs  secrets.rs  ses.rs  smtp.rs
installer/windows/: massfckinmailer.iss
