[package]
name = "mmm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
regex.workspace = true
thiserror.workspace = true
csv.workspace = true
calamine.workspace = true
minijinja.workspace = true
dirs.workspace = true
