[package]
name = "mmm-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flume.workspace = true
tokio.workspace = true
tokio-util.workspace = true
governor.workspace = true
csv.workspace = true
mmm-core.workspace = true
mmm-providers.workspace = true

[dev-dependencies]
async-trait.workspace = true
