[package]
name = "mmm-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
toml.workspace = true
dirs.workspace = true
lettre.workspace = true
reqwest.workspace = true

# Keyring backends are platform-specific; enable the native store per OS.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { workspace = true }
