[package]
name = "mmm-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
lettre.workspace = true
reqwest.workspace = true
aws-sdk-sesv2.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
url.workspace = true
open.workspace = true

# Keyring backends are platform-specific; enable the native store per OS.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tokio = { workspace = true }
